<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity5">

        <ImageView
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="474dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:contentDescription="Nordijska Mitologija"
            android:focusable="true"
            android:src="@drawable/nordicmainx" />

        <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/imageButton1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:contentDescription="Freja"
            android:src="@drawable/freja4x" />

        <ImageView
            android:id="@+id/imageButton3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/imageButton1"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:contentDescription="Loki"
            android:src="@drawable/loki4x" />

        <ImageView
            android:id="@+id/imageButton4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/imageButton2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:contentDescription="Odin"
            android:src="@drawable/odin4x" />

        <ImageView
            android:id="@+id/imageButton5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/imageButton3"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:contentDescription="Thor"
            android:src="@drawable/thor4x" />

        <ImageView
            android:id="@+id/imageButton6"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/imageButton4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:contentDescription="Tir"
            android:src="@drawable/tir4x" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton6"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/Nordijska"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </ScrollView>
    </RelativeLayout>
</ScrollView>
