<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityRa"
    android:orientation="horizontal"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="300dp"
        android:layout_height="474dp"
        android:layout_marginLeft="55dp"
        android:layout_weight="1"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ra4x"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/Ra"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </ScrollView>




</RelativeLayout>