<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".MainActivityPrice">

    <EditText
        android:id="@+id/editTextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Unesite Naslov"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextHeader"
        android:layout_marginTop="16dp"
        android:hint="Unesite priču"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_marginTop="16dp"
        android:text="Unesi" />


    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonInsert"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF" />

</RelativeLayout>
